<resources>
    <string name="app_name">S13</string>
    <string name="enim_eu_turpis_egestas_pretium_aenean_risus_viverra_adipiscing_at_in_tellus_integer_feugiat_massa_tincidunt_dui_ut_ornare_lectus_commodo_odio_aenean_sed_adipiscing_diam_donec_a">Enim eu turpis egestas pretium aenean. Risus viverra adipiscing at in tellus integer feugiat. Massa tincidunt dui ut ornare lectus. Commodo odio aenean sed adipiscing diam donec a</string>
    <string name="teText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi eget mauris pharetra et ultrices neque. Augue ut lectus arcu bibendum at. Quisque non tellus orci ac auctor augue mauris. Enim eu turpis egestas pretium aenean. Risus viverra adipiscing at in tellus integer feugiat. Massa tincidunt dui ut ornare lectus. Commodo odio aenean sed adipiscing diam donec adipiscing. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. android:textSize=</string>
    <string name="hello_student">Hello Student</string>
    <string name="teacher">Teacher</string>
    <string name="course001">Course001</string>
    <string name="course002">Course002</string>
    <string name="course003">Course003</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="text01">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Tincidunt arcu non sodales neque. Molestie a iaculis at erat pellentesque adipiscing commodo elit. Mauris pharetra et ultrices neque ornare aenean euismod.
        Tristique risus nec feugiat in fermentum. Ornare massa eget egestas purus viverra accumsan. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Fermentum
        dui faucibus in ornare quam viverra orci sagittis. Mi bibendum neque egestas congue quisque egestas diam in arcu. Est ante in nibh mauris cursus mattis molestie a iaculis. Aliquet lectus proin nibh nisl condimentum id. Id venenatis a condimentum vitae sapien pellentesque habitant morbi. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Viverra suspendisse potenti nullam ac tortor. Quis hendrerit dolor magna eget est lorem.

Netus et malesuada fames ac turpis egestas integer eget aliquet. Lorem donec massa sapien faucibus et molestie ac feugiat sed. Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Dui faucibus in ornare quam viverra. Risus viverra adipiscing at in tellus integer feugiat. Tristique senectus et netus et malesuada fames ac turpis egestas. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Eget duis at tellus at urna. Etiam sit amet nisl purus in. Ultrices gravida dictum fusce ut placerat. Fringilla est ullamcorper eget nulla facilisi etiam dignissim.

Congue mauris rhoncus aenean vel elit scelerisque mauris. Viverra suspendisse potenti nullam ac. Mollis aliquam ut porttitor leo. Aliquet nec ullamcorper sit amet risus. Enim nec dui nunc mattis. Scelerisque viverra mauris in aliquam sem fringilla ut. Non sodales neque sodales ut etiam sit amet nisl purus. Varius duis at consectetur lorem donec massa sapien faucibus. Arcu cursus euismod quis viverra nibh cras pulvinar mattis. In fermentum et sollicitudin ac orci phasellus egestas tellus. Elementum pulvinar etiam non quam lacus. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Magna ac placerat vestibulum lectus mauris ultrices eros.</string>
    <string name="age_edit">سن خود را وارد کنید</string>
    <string name="name_hamid">حمید رضا پورجواد</string>
    <string name="star_image">star image</string>
</resources>