<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAct501"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#3F51B5"
        android:padding="5dp"
        android:text="@string/hello_student"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAct502"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#009688"
        android:padding="5dp"
        android:text="@string/teacher"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tvAct503"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAct501" />

    <TextView
        android:id="@+id/tvAct503"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336"
        android:text="@string/course001"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAct504"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAct502"
        app:layout_constraintTop_toBottomOf="@+id/tvAct501"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tvAct504"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336"
        android:text="@string/course002"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAct505"
        app:layout_constraintEnd_toEndOf="@+id/tvAct503"
        app:layout_constraintStart_toStartOf="@+id/tvAct503"
        app:layout_constraintTop_toBottomOf="@+id/tvAct503" />

    <TextView
        android:id="@+id/tvAct505"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F44336"
        android:text="@string/course003"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tvAct502"
        app:layout_constraintEnd_toEndOf="@+id/tvAct504"
        app:layout_constraintStart_toStartOf="@+id/tvAct504"
        app:layout_constraintTop_toBottomOf="@+id/tvAct504" />

    <Button
        android:id="@+id/btnAct501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/btnAct502"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAct502"
        app:layout_constraintTop_toTopOf="@+id/btnAct502" />

    <Button
        android:id="@+id/btnAct502"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/cancel"
        app:backgroundTint="#807575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAct501"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>